:whale: [#4246] Redo/setup docker-compose Keycloak
The previous configuration was geared towards running Keycloak locally
to test out full integration (manually, with runserver). This was not
really used by anyone, so the configuration got outdated.

Instead, the setup is now done so that the config is spun up every time
we re-record VCR cassettes. The Client ID and Secret are included in
the VCR.py tests and we record the full network traffic for OIDC-based
tests during tests to replay them on CI.

The README documents how to dump the 'fixture' again after making
changes in Keycloak's UI for when requirements change.

--- a/docker/docker-compose.keycloak.yml
+++ b/docker/docker-compose.keycloak.yml
@@ -1,14 +1,25 @@
-version: '3.4'
+# Config taken from https://stackoverflow.com/a/77257732
+#
+# This docker-compose is for development and test purposes. Tests are recorded with
+# VCR against this instance.
+#
+#   Log in to http://localhost:8080/admin/master/console/ with `admin`/`admin`
+#   credentials.
+#
+# DO NOT USE THIS IN PRODUCTION.
+#
+
+version: '3.8'
 
 services:
   keycloak:
-    image: jboss/keycloak
+    image: quay.io/keycloak/keycloak:23.0
+    command: start-dev --import-realm
     environment:
-      - KEYCLOAK_USER=demo
-      - KEYCLOAK_PASSWORD=demo
-      - KEYCLOAK_IMPORT=/realm.json
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
     volumes:
-      - ./keycloak/fixtures/realm.json:/realm.json
+      - ./keycloak/import:/opt/keycloak/data/import
     ports:
       - 8080:8080
     networks:
