:bug: [#4350] Disable link protocol warning in TinyMCE
Now the ui dialog is only shown for links without protocol that start
with 'www'. When using form variables/template expressions in links,
prepending https:// breaks the link because it's already being added
in during template evaluation.

Form builders need to make sure they paste the correct links, but
modern browsers basically always include the protocol already.

--- a/src/openforms/conf/tinymce_config.json
+++ b/src/openforms/conf/tinymce_config.json
@@ -9,6 +9,6 @@
     "content_style": "body { font-family:Helvetica,Arial,sans-serif; font-size:14px }",
     "default_link_target": "_blank",
     "link_default_protocol": "https",
-    "link_assume_external_targets": true,
+    "link_assume_external_targets": false,
     "convert_urls": false
 }
