--- a/.github/workflows/sb.yml
+++ b/.github/workflows/sb.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up backend environment
         uses: maykinmedia/setup-django-backend@v1.2
         with:
-          apt-packages: 'libxml2-dev libxmlsec1-dev libxmlsec1-openssl gdal-bin'
+          apt-packages: 'libxml2 libxmlsec1 libxmlsec1-openssl gdal-bin'
           python-version: '3.10'
           optimize-postgres: 'no'
           setup-node: 'yes'
