:alien: Set height of tinymce editor in config
The upgrade apparently makes them 400px high which is excessive.

--- a/src/openforms/conf/tinymce_config.json
+++ b/src/openforms/conf/tinymce_config.json
@@ -1,4 +1,5 @@
 {
+    "height": 200,
     "menubar": false,
     "plugins": [
         "advlist autolink lists link image charmap print preview anchor",
