--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -2,8 +2,29 @@
 include = [
     # plugin/registry-related code (base classes etc.)
     "src/openforms/plugins",
+    "src/openforms/appointments/base.py",
+    "src/openforms/appointments/registry.py",
     "src/openforms/authentication/base.py",
     "src/openforms/authentication/registry.py",
+    "src/openforms/dmn/base.py",
+    "src/openforms/dmn/registry.py",
+    "src/openforms/formio/registry.py",
+    "src/openforms/formio/rendering/registry.py",
+    "src/openforms/payments/registry.py",
+    "src/openforms/pre_requests/base.py",
+    "src/openforms/pre_requests/registry.py",
+    "src/openforms/prefill/base.py",
+    "src/openforms/prefill/registry.py",
+    "src/openforms/registrations/base.py",
+    "src/openforms/registrations/registry.py",
+    "src/openforms/validations/base.py",
+    "src/openforms/validations/registry.py",
+    "src/openforms/variables/base.py",
+    "src/openforms/variables/registry.py",
+    # our own template app/package on top of Django
+    "src/openforms/template",
+    # generic typing helpers
+    "src/openforms/typing.py",
 ]
 exclude = ["**/__pycache__"]
 ignore = []
