:wrench: [#4456] Update settings file for environment information display
* Added additional settings for minimal customizing: content of the
  environment label (to not break forms that rely on settings.ENVIRONMENT)
  and background/foreground colors so that contrast can be managed
  while being able to set up different colors per environment.
* Made the SHOW_ENVIRONMENT setting configurable via the envvars
* Removed the hardcoded SHOW_ENVIRONMENT in the production settings
  file, since it can be set via the env now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,11 @@ services:
       - USE_LEGACY_OIDC_ENDPOINTS=no
       - USE_LEGACY_DIGID_EH_OIDC_ENDPOINTS=no
       - USE_LEGACY_ORG_OIDC_ENDPOINTS=no
+      # Environment labeling
+      - SHOW_ENVIRONMENT=yes
+      - ENVIRONMENT_LABEL=docker-compose
+      - ENVIRONMENT_BACKGROUND_COLOR=#1d63ed
+      - ENVIRONMENT_FOREGROUND_COLOR=white
     volumes: &web_volumes
       - media:/app/media
       - private_media:/app/private_media
