--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -24,6 +24,9 @@ include = [
     # Formio tooling
     "src/openforms/formio/typing/",
     "src/openforms/formio/formatters/",
+    # Registrations
+    "src/openforms/registrations/contrib/email/config.py",
+    "src/openforms/registrations/contrib/email/plugin.py",
     # our own template app/package on top of Django
     "src/openforms/template",
     # generic typing helpers
@@ -31,7 +34,7 @@ include = [
 ]
 exclude = [
     "**/__pycache__",
-    "src/openforms/formio/formatters/tests/"
+    "src/openforms/formio/formatters/tests/",
 ]
 ignore = []
 
